<resources>
    <string name="app_name">Cardview</string>
    <string name="botao_1">Clone ID</string>
    <string name="botao_2">Clone Key</string>
    <string name="toastId">ID: 74</string>
    <string name="toastKey">Key: 3713127</string>
    <string name="titulo">Orphan Black</string>
    <string name="subtitulo">Clone Club</string>
    <string name="icone">Icone</string>
    <string name="imagem_principal">Imagem Principal</string>
    <string name="texto_principal">Membro do Clube de Clones</string>
</resources>
